server-elm-style.css
/* ... */
div#modify-menu div.keyvalues>div.keyvalue {
    display: table-row;
}

div#modify-menu div.keyvalues>div.keyvalue>* {
    display: table-cell;
    padding-left: 4px;
    vertical-align: middle;
}

div#modify-menu div.keyvalues>div.keyvalueadder {
    opacity: 0.5;
}

div#modify-menu div.keyvalues>div.keyvalueadder:hover {
    opacity: 1;
}

div#modify-menu input {
    padding: 6px;
    width: 100%;
}

div#modify-menu .codefont {
    font-size: 1.4em;
    font-family: monospace;
}

div#modify-menu .tagname-input {
    padding: 4px;
    flex: 1;
}

div#modify-menu .tagname-input input {
    display: inline-block;
}

div#modify-menu .tagname-info {
    display: inline-block;
    border-radius: 4px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    background: transparent;
    color: var(--context-dom-text-color);
    flex: 2;
    line-height: 3.5em;
}

div#modify-menu input[type=radio] {
    width: initial;
    font-size: 1em;
}

div#modify-menu span.insertOption {
    display: block;
}

div.keyvalue>span>input {
    border-radius: 4px;
    margin: 2px;
}

div.tagname-summary {
    display: flex;
    background-color: var(--context-dom-selector-color);
    border-radius: 0.4em;
    padding: 4px;
    margin: 2%;
}

.inline-input {
    background: transparent;
    color: var(--context-dom-text-color);
    border: none;
}

/* dom selector css */

div.dom-selector-style {
    margin: 2%;
    margin-bottom: 0;
    border-radius: 0.4em;
    padding: 0.4rem;
}

div.childrenElem {
    display: flex;
    height: 30px;
    margin-top: 4px;
}

div.mainElemName {
    color: var(--context-dom-text-color);
    font-family: monospace;
}

div.childrenSelectorName {
    font-family: monospace;
}

div.childrenSelector {
    min-width: 50px;
    position: relative;
    flex: 1;
    text-align: center;
    overflow: hidden;
    padding: 2px;
    margin: 2px;
    border-radius: 0.3rem;
    background-color: var(--context-dom-children-selector-color);
    transition: all 0.5s;
    text-decoration: none;
    cursor: pointer;
}

div.childrenSelector:hover {
    -webkit-filter: contrast(125%);
    /* Chrome, Opera */
    -moz-filter: blur(125%);
    -ms-filter: blur(125%);
    filter: blur(125%);
}

div.mainElem {
    height: 62px;
    position: relative;
    text-align: center;
    overflow: hidden;
    font-size: 1.3em;
    text-overflow: ellipsis;
}

div.mainElemInfo {
    font-size: 0.6em;
    color: var(--context-dom-text-color);
    height: 20px;
    overflow: hidden;
    text-overflow: ellipsis;
}

div.childrenSelectorInfo {
    text-overflow: ellipsis;
    overflow: hidden;
    color: var(--context-dom-text-color);
    height: 38px;
    font-size: 0.8em;
}

div.elementAttr {
    margin-left: 6px;
    display: inline-block;
    font-size: 0.6em;
    line-height: 1.02em;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    color: var(--context-dom-text-color);
}

div.no-children, div.no-parent {
    background-color: transparent;
    text-align: center;
    text-transform: uppercase;
    color: black;
    border-radius: 0.3rem;
    font-weight: bold;
    line-height: 36px;
    font-size: 0.8rem;
    pointer-events: none;
}

div.no-children {
    width: 100%;
}

div.no-sibling {
    background-color: transparent;
    color: black;
    width: 20%;
    text-transform: uppercase;
    font-size: 0.7rem;
    line-height: 20px;
    font-weight: bold;
    min-width: 50px;
    pointer-events: none;
}

/* make button's text unselectable for better user experience */

.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.selectedDom {
    background-color: var(--context-dom-selector-color) !important;
    border: none;
}

#upload-image-btn-a {
    margin-left: 0;
    margin-top: 10px;
    margin-bottom: 10px;
    height: 20px;
    position: relative;
    color: black;
    background: transparent;
    border-radius: 4px;
    display: inline-block;
    height: 20px;
    width: 280px;
}

#upload-image-btn-input {
    position: absolute;
    top: -7px; /* alignment */
    left: 0;
    width: 100%;
}

/* highlight selected image */

div.highlight-select-image {
    border: 1px solid white;
    border-radius: 0.76em;
}

:root {
    --context-color: rgba(0, 128, 128, 0.8);
    --context-color-next: rgba(0, 158, 158, 0.8);
    --context-button-color: rgba(0, 192, 192, 0.8);
    --context-button-color-hover: rgba(0, 232, 232, 0.8);
    --context-button-color-inert: rgba(128, 128, 128, 0.8);
    --context-button-color-inert-hover: rgba(150, 150, 150, 0.8);
    --context-button-color-inert-active: rgba(182, 182, 182, 0.8);
    --context-dom-selector-color: rgba(0, 212, 159, 0.8);
    --context-dom-children-selector-color: rgba(0, 178, 179, 0.8);
    --context-dom-text-color: whitesmoke;
    --context-menu-height: 30px;
    --context-menu-button-width: 40px;
    --context-menu-padding-top: 0px;
    --context-menu-padding-left: 0px;
    --context-button-selected: rgba(0, 212, 212, 0.8);
}

div.tagName {
    padding: 4px;
    cursor: pointer;
    background: var(--context-button-color);
    vertical-align: text-bottom;
}

div.tagName:hover {
    background: var(--context-button-color-hover);
}

[ghost-hovered=true] {
    outline: 2px dashed var(--context-color-next);
}

[ghost-clicked=true] {
    outline: 2px solid var(--context-color);
}

div#context-menu {
    position: absolute;
    display: none;
    background-color: var(--context-color);
    color: white;
    font-weight: bold;
    z-index: 1000000;
}

div#context-menu.visible {
    display: block;
    height: var(--context-menu-height);
    width: 200px;
}
/* ... */

